# 3e8_ros2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/3e8_ros2_foxglove/lib/3e8_ros2_foxglove/: fix_camera_foxglove
log/: latest_build
src/: build_and_launch.sh  build_and_launch_partial.sh  check_mapping_setup.sh  install_boot_service.sh  launch.sh  launch_with_display_wait.sh  map.sh  save_map.sh
src/3e8_ros2/: package.xml  setup.cfg  setup.py
src/3e8_ros2_bringup/: package.xml  setup.cfg  setup.py
src/3e8_ros2_description/: package.xml  setup.cfg  setup.py
src/3e8_ros2_foxglove/foxglove_bridge/: setup.py
src/3e8_ros2_foxglove/scripts/: fix_camera_foxglove.sh  foxglove.sh
src/3e8_ros2_localization/: LICENSE.txt  package.xml  setup.cfg  setup.py
src/3e8_ros2_motor_control/gantry_controller/: package.xml  setup.py
src/3e8_ros2_motor_control/misc_motor_controller/: package.xml  setup.cfg  setup.py
src/3e8_ros2_motor_control/servo_controller/: package.xml  setup.py
src/3e8_ros2_motor_control/servo_controller/servo_controller/: calibrate_odrive.py
src/3e8_ros2_navigation/: package.xml  setup.cfg  setup.py
src/3e8_ros2_sensors/camera_driver/: package.xml  setup.py
src/3e8_ros2_sensors/realsense_driver/: package.xml  setup.cfg  setup.py
src/3e8_ros2_sensors/tof_driver/: package.xml  setup.cfg  setup.py
src/3e8_ros2_system_tests/: package.xml  setup.cfg  setup.py
src/3e8_ros2_teleop/: package.xml  setup.cfg  setup.py
src/3e8_ros2_utils/: package.xml  setup.cfg  setup.py
(+11 files in other folders)
