<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_controller</name>
  <version>0.0.1</version>
  <description>Motor controller package to drive the Elly robots developed by 3E8 robotics.</description>
  <maintainer email="ikshwakjinesh@gmail.com">Ikshwak</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>fibre</exec_depend>
  <exec_depend>odrive</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
